--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: .
       - name: Build website
         run: npm run build
+        working-directory: .
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
