--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master
+      - main
     # Review gh actions docs if you want to further define triggers, paths, etc
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
@@ -22,10 +22,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: .
       - name: Build website
         run: npm run build
-        working-directory: .
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
